--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Compact 10-Image Slideshow</title>
+  <title>30% Smaller Image Slideshow</title>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap");
     * {
@@ -13,18 +13,27 @@
     body {
       font-family: "Lexend", sans-serif;
       background-color: #362a2b;
-      transform: scale(0.5); /* 50% size reduction */
-      transform-origin: top left;
-      width: 200%; /* Counteract scaling */
-      height: 200%;
-      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .slider-container {
+      transform: scale(0.7); /* 30% smaller (70% scale) */
+      transform-origin: center;
+      width: 142.86%; /* 100/0.7 */
+      height: 142.86%;
+      position: relative;
     }
     .slider {
-      position: relative;
-      width: 50vw; /* Half of viewport width */
-      height: 50vh; /* Half of viewport height */
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100vw;
+      height: 100vh;
       overflow: hidden;
-      margin: 0 auto;
     }
     .slide {
       position: absolute;
@@ -34,6 +43,10 @@
       height: 100%;
       opacity: 0;
       transition: opacity 1s ease-in-out;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-color: #362a2b;
     }
     .slide.current {
       opacity: 1;
@@ -41,18 +54,20 @@
   </style>
 </head>
 <body>
-  <div class="slider">
-    <!-- Update these paths to your actual image files -->
-    <div class="slide current" style="background: url('images/1.jpg') no-repeat center center/cover;"></div>
-    <div class="slide" style="background: url('images/2.jpg') no-repeat center center/cover;"></div>
-    <div class="slide" style="background: url('images/3.jpg') no-repeat center center/cover;"></div>
-    <div class="slide" style="background: url('images/4.jpg') no-repeat center center/cover;"></div>
-    <div class="slide" style="background: url('images/5.jpg') no-repeat center center/cover;"></div>
-    <div class="slide" style="background: url('images/6.jpg') no-repeat center center/cover;"></div>
-    <div class="slide" style="background: url('images/7.jpg') no-repeat center center/cover;"></div>
-    <div class="slide" style="background: url('images/8.jpg') no-repeat center center/cover;"></div>
-    <div class="slide" style="background: url('images/9.jpg') no-repeat center center/cover;"></div>
-    <div class="slide" style="background: url('images/10.jpg') no-repeat center center/cover;"></div>
+  <div class="slider-container">
+    <div class="slider">
+      <!-- Update these paths to your actual image files -->
+      <div class="slide current" style="background-image: url('images/1.jpg')"></div>
+      <div class="slide" style="background-image: url('images/2.jpg')"></div>
+      <div class="slide" style="background-image: url('images/3.jpg')"></div>
+      <div class="slide" style="background-image: url('images/4.jpg')"></div>
+      <div class="slide" style="background-image: url('images/5.jpg')"></div>
+      <div class="slide" style="background-image: url('images/6.jpg')"></div>
+      <div class="slide" style="background-image: url('images/7.jpg')"></div>
+      <div class="slide" style="background-image: url('images/8.jpg')"></div>
+      <div class="slide" style="background-image: url('images/9.jpg')"></div>
+      <div class="slide" style="background-image: url('images/10.jpg')"></div>
+    </div>
   </div>
 
   <script>
