--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
     body {
       font-family: "Lexend", sans-serif;
-      background-color: #362a2b;
+      background-color: #00000000;
       display: flex;
       justify-content: center;
       align-items: center;
