--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-      background-color: #362a2b;
+      background-color: #00000000;
     }
     .slide.current {
       opacity: 1;
